--- a/booking_react/package.json
+++ b/booking_react/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.3.3",
     "npm": "^10.8.1",
     "react": "^18.3.1",
+    "react-alice-carousel": "^2.9.1",
     "react-bootstrap": "^2.10.2",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
